[package]
name = "cognito_srp"
version = "0.1.2"
authors = ["Luc Dewavrin"]
license = "MIT"
description = "AWS cognito Secure Remote Password (SRP) client implementation"
documentation = "https://docs.rs/cognito_srp"
repository = "https://github.com/lucdew/cognito-srp"
keywords = ["crypto", "aws", "cognito"]
categories = ["cryptography", "authentication"]
readme = "README.md"
edition = "2021"
rust-version = "1.56"


[dependencies]
base64 = "0.13.0"
chrono = "0.4"
digest = "0.10.3"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
num-bigint = "0.4"
rand = "0.8.4"
regex = "1.6.0"
sha2 = "0.10.2"
thiserror = "1.0.32"
